apply btn added

--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
                             <!-- coupon -->
                             <label class="input input-bordered flex items-center gap-2 bg-white">
                                 <input id="input-coupon" type="text" class="grow " placeholder="Have any coupon ?" />
-                                <kbd onclick="grandPrice()" class="kbd kbd-sm btn-primary2 p-2">Apply</kbd>
+                                <button onclick="grandPrice()" class="btn kbd-sm btn-primary2 p-2">Apply</button>
                             </label>
                             <div class="flex justify-between my-5">
                                 <p class="text-black font-bold">Grand Price</p>
